tests/org.eclipse.php.core.tests/workspace/errors/php53/unfinishedClassDecl3.pdtt
--TEST--
Test unfinished class declaration error reporting
--FILE--
<?php
class A 
?>
--EXPECT--
[line=3, start=15, end=18] syntax error, unexpected 'EOF', expecting '{'